--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
 
 <h1>Code Test</h1>
-<p>Markets.selections have pulled from the JSON (mock api endpoint), ordered by row, then col.</p>
+<p>Markets.selections have been pulled from the JSON (mock api endpoint), ordered by row, then col.</p>
 <p>Rendered via a collection of models into a collection of views using a html table row template.</p>
 <p>Global event listener is listening for emitted "bet:addBet" events.</p>
 <p>Click handler on unsuspended buttons that trigger and emit the bet:addBet event, 
-	passing an object containing the marlerts type, and the selected betID.</p>
-	<p>I left a few console logs in there for good measure.</p>
+	passing an object containing the markets type, and the selected betID.</p>
+<p>I left a few console logs in there for good measure.</p>
 <hr/>
 
 <table class="list" border="1">
